sew-4 JWT Authetication working

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=sew;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=true"
+  },
+  "JWT": {
+    "key": "sdfs^&&#%GFHeyf456fffWEWRCCxstr6wecewr673674rfhsdvfyu3r46R%E%TSFdsdfsdf"
   }
 }
