--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=sew;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=true"
+  },
+  "JWT": {
+    "key": "sdfs^&&#%GFHeyf456fffWEWRCCxstr6wecewr673674rfhsdvfyu3r46R%E%TSFdsdfsdf"
   }
 }
