sew-5 bypass auth routes

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,21 @@
   },
   "JWT": {
     "key": "sdfs^&&#%GFHeyf456fffWEWRCCxstr6wecewr673674rfhsdvfyu3r46R%E%TSFdsdfsdf"
+  },
+  "OTPEmailTemplate": {
+    "Subject": "OTP",
+    "Body": "Your one time password (OTP) is {{OTP}} to login. <br/><br/> Team Sumit Engineering Works"
+  },
+  "MailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUserName": "sunilsanghadiya.developer@gmail.com",
+    "SmtpPassword": "Sunil.@1033$=DEVELOPER",
+    "SmtpFromEmailAddress": "sunilsanghadiya.developer@gmail.com",
+    "SmtpFromName": "Sumit Engineering Works",
+    "IsEnableSsl": true,
+    "DefaultEmailAddress": "sunilsanghadiya780@gmail.com",
+    "EmailSeparator": ",",
+    "MaxAllowFileSize": 15
   }
 }
