--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,20 +11,22 @@
   "JWT": {
     "key": "sdfs^&&#%GFHeyf456fffWEWRCCxstr6wecewr673674rfhsdvfyu3r46R%E%TSFdsdfsdf"
   },
-  "OTPEmailTemplate": {
+  "ServiceSettings": {
+    "OTPEmailTemplate": {
     "Subject": "OTP",
     "Body": "Your one time password (OTP) is {{OTP}} to login. <br/><br/> Team Sumit Engineering Works"
   },
   "MailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "SmtpUserName": "sunilsanghadiya.developer@gmail.com",
-    "SmtpPassword": "Sunil.@1033$=DEVELOPER",
-    "SmtpFromEmailAddress": "sunilsanghadiya.developer@gmail.com",
+    "SmtpUserName": "dondevil55555@gmail.com",
+    "SmtpPassword": "Sunil.@1033$",
+    "SmtpFromEmailAddress": "dondevil55555@gmail.com",
     "SmtpFromName": "Sumit Engineering Works",
     "IsEnableSsl": true,
     "DefaultEmailAddress": "sunilsanghadiya780@gmail.com",
     "EmailSeparator": ",",
     "MaxAllowFileSize": 15
+    }
   }
 }
